# mqtt-protocol-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  check.sh  debug_test.rs  test_asm_comparison  test_enum_vs_struct
.github/workflows/: ci.yml
examples/: publish.rs  subscribe.rs  type_alias_usage.rs
src/: default_alias.rs  lib.rs  logger.rs  make_alias.rs
src/mqtt/: make_alias.rs  mod.rs  packet_id_manager.rs  prelude.rs  result_code.rs  type_aliases.rs  value_allocator.rs  version.rs
src/mqtt/common/: arc.rs  arc_payload.rs  cursor.rs  mod.rs  tracing.rs  value_allocator.rs
src/mqtt/connection/: core.rs  event.rs  mod.rs  packet_builder.rs  packet_id_manager.rs  prelude.rs  role.rs  sendable.rs  sendable_helper.rs  sendable_role.rs  sendable_version.rs  store.rs  version.rs
src/mqtt/packet/: as_concrete.rs  enum_packet.rs  enum_store_packet.rs  json_bin_encode.rs  kind.rs  mod.rs  mqtt_binary.rs  mqtt_string.rs  optimization.rs  packet_id.rs  packet_type.rs  prelude.rs  property.rs  qos.rs  retain_handling.rs  sub_entry.rs  topic_alias_recv.rs  topic_alias_send.rs  variable_byte_integer.rs
src/mqtt/packet/v3_1_1/: connack.rs  connect.rs  disconnect.rs  mod.rs  pingreq.rs  pingresp.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
src/mqtt/packet/v5_0/: auth.rs  common.rs  connack.rs  connect.rs  disconnect.rs  mod.rs  pingreq.rs  pingresp.rs  puback.rs  pubcomp.rs  publish.rs  pubrec.rs  pubrel.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
src/mqtt_internal/: prelude.rs
src/mqtt_internal/common/: arc_payload.rs  cursor.rs  tracing.rs  value_allocator.rs
src/mqtt_internal/connection/: core.rs  event.rs  packet_id_manager.rs  sendable_helper.rs  sendable_role.rs  sendable_version.rs  version.rs
src/mqtt_internal/packet/: enum_store_packet.rs  json_bin_encode.rs  kind.rs  mod.rs  mqtt_binary.rs  optimization.rs  packet_id.rs  packet_type.rs  property.rs  qos.rs  retain_handling.rs  topic_alias_recv.rs  topic_alias_send.rs
src/mqtt_internal/packet/v3_1_1/: connack.rs  connect.rs  mod.rs  puback.rs  pubcomp.rs  pubrec.rs  suback.rs  subscribe.rs  unsuback.rs  unsubscribe.rs
src/mqtt_internal/packet/v5_0/: connack.rs  connect.rs  disconnect.rs  mod.rs  publish.rs  pubrec.rs
tests/: common-arc_payload-sso.rs  common-arc_payload.rs  common-cursor-analysis.rs  common-cursor-performance.rs  common-cursor.rs  common-value_allocator.rs  connection-core-auto-res.rs  connection-core-cancel-timer.rs  connection-core-keep-alive.rs  connection-core-maximum-packet-size.rs  connection-core-misc.rs  connection-core-notify-closed.rs  connection-core-notify-timer-fired.rs  connection-core-receive-maximum.rs  connection-core-recv-error.rs  connection-core-recv-success.rs  connection-core-recv-undetermined.rs  connection-core-send-error-compile-time-role-version.rs  connection-core-send-error-pids.rs  connection-core-send-error-role-version.rs  connection-core-send-error-status.rs  connection-core-send-success.rs  connection-core-store.rs  connection-core-topic-alias.rs  connection-event.rs  connection-packet_builder.rs  connection-pingreq-interval.rs  connection-store.rs  json_bin_encode.rs  packet-enum_packet.rs  packet-enum_store_packet.rs  packet-mqtt_binary-sso.rs  packet-mqtt_binary.rs  packet-mqtt_string-generics.rs  packet-mqtt_string-sso.rs  packet-mqtt_string.rs  packet-packet_type.rs  packet-property.rs  packet-qos.rs  packet-retain_handling.rs  (+40 more)
tests/common/: mod.rs
