[package]
name = "mqtt-protocol-core"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Takatoshi Kondo <redboltz@gmail.com>"]
description = "A Sans-I/O style MQTT protocol library for Rust that supports both MQTT v5.0 and v3.1.1."
repository = "https://github.com/redboltz/mqtt-protocol-core"
homepage = "https://github.com/redboltz/mqtt-protocol-core"
documentation = "https://docs.rs/mqtt-protocol-core"
readme = "README.md"
keywords = ["mqtt", "protocol", "networking", "iot", "sans-io"]
categories = ["network-programming", "embedded", "api-bindings"]

[features]
default = ["std"]
std = ["tracing-subscriber", "tracing-appender"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }  # MQTT packet serialize/deserialize
serde_json = "1.0"  # JSON serialization for Display implementations
thiserror = "1.0"   # Error handling
delegate = "0.13"
arrayvec = "0.7"
strum = "0.27"
strum_macros = "0.27"
once_cell = "1.18"
num-traits = "0.2"
indexmap = "2"
hashbrown = "0.14"
num_enum = "0.7"
derive_builder = { version = "0.20", features = ["alloc"], default-features = false }
getset = "0.1.5"
enum_dispatch = "0.3"

# logging
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"], optional = true }
tracing-appender = { version = "0.2", optional = true }

[dev-dependencies]
static_assertions = "1.1"

# Release optimization settings
[profile.release]
# Enable maximum optimization
opt-level = 3
# Enable link-time optimization for better performance
lto = true
# Use 1 codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true

