[package]
name = "mqtt-protocol-core"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Takatoshi Kondo <redboltz@gmail.com>"]
description = "A Sans-I/O style MQTT protocol library for Rust that supports both MQTT v5.0 and v3.1.1."
repository = "https://github.com/redboltz/mqtt-protocol-core"
homepage = "https://github.com/redboltz/mqtt-protocol-core"
documentation = "https://docs.rs/mqtt-protocol-core"
readme = "README.md"
keywords = ["mqtt", "protocol", "networking", "iot", "sans-io"]
categories = ["network-programming", "embedded", "api-bindings"]

[features]
default = ["std", "sso-bin-24", "sso-str-24", "sso-payload-31"]
std = []
tracing = ["dep:tracing"]

# Small String Optimization (SSO) features for MqttBinary
sso-bin-24 = []
sso-bin-32 = []
sso-bin-64 = []
sso-bin-128 = []
sso-bin-256 = []
sso-bin-1024 = []
sso-bin-4096 = []

# Small String Optimization (SSO) features for MqttString
sso-str-24 = []
sso-str-32 = []
sso-str-64 = []
sso-str-128 = []
sso-str-256 = []
sso-str-1024 = []
sso-str-4096 = []

# Small String Optimization (SSO) features for ArcPayload
sso-payload-31 = []
sso-payload-64 = []
sso-payload-128 = []
sso-payload-255 = []
sso-payload-1024 = []
sso-payload-4096 = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }  # MQTT packet serialize/deserialize
serde_json = "1.0"  # JSON serialization for Display implementations
thiserror = "1.0"   # Error handling
delegate = "0.13"
arrayvec = "0.7"
strum = "0.27"
strum_macros = "0.27"
once_cell = "1.18"
num-traits = "0.2"
indexmap = "2"
hashbrown = "0.14"
num_enum = "0.7"
derive_builder = { version = "0.20", features = ["alloc"], default-features = false }
getset = "0.1.5"
enum_dispatch = "0.3"

# logging
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
static_assertions = "1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

# Release optimization settings
[profile.release]
# Enable maximum optimization
opt-level = 3
# Enable link-time optimization for better performance
lto = true
# Use 1 codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true

