[package]
name = "mqtt-protocol-core"
version = "0.7.2"
edition = "2021"
rust-version = "1.86.0"
license = "MIT"
authors = ["Takatoshi Kondo <redboltz@gmail.com>"]
description = "A Sans-I/O style MQTT protocol library for Rust that supports both MQTT v5.0 and v3.1.1."
repository = "https://github.com/redboltz/mqtt-protocol-core"
homepage = "https://github.com/redboltz/mqtt-protocol-core"
documentation = "https://docs.rs/mqtt-protocol-core"
readme = "README.md"
keywords = ["mqtt", "protocol", "networking", "iot", "sans-io"]
categories = ["network-programming", "embedded", "api-bindings"]

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
    "thiserror/std",
    "arrayvec/std",
    "strum/std",
    "once_cell/std",
    "num-traits/std",
    "indexmap/std",
    "num_enum/std",
    "derive_builder/std",
    "foldhash/std",
    "tracing?/std",
]
tracing = ["dep:tracing"]

# Small String Optimization (SSO) features
# These features control the stack buffer size for MqttString, MqttBinary, and ArcPayload types
sso-min-32bit = []  # MqttString/MqttBinary: 12, ArcPayload: 15 - 32bit enum size optimized
sso-min-64bit = []  # MqttString/MqttBinary: 24, ArcPayload: 31 - 64bit enum size optimized
sso-lv10 = []       # MqttString/MqttBinary: 24, ArcPayload: 127 - Level 10 optimization
sso-lv20 = []       # MqttString/MqttBinary: 48, ArcPayload: 255 - Level 20 optimization

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "derive",
] } # MQTT packet serialize/deserialize
serde_json = { version = "1.0", default-features = false, features = [
    "alloc",
] } # JSON serialization for Display implementations
thiserror = { version = "2.0", default-features = false } # Error handling
delegate = "0.13"
arrayvec = { version = "0.7", default-features = false }
strum = { version = "0.27", default-features = false }
strum_macros = "0.27"
once_cell = { version = "1.18", default-features = false }
num-traits = { version = "0.2", default-features = false }
indexmap = { version = "2", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = [
    "alloc",
    "core",
    "inline-more",
] }
num_enum = { version = "0.7", default-features = false }
derive_builder = { version = "0.20", default-features = false, features = [
    "alloc",
] }
getset = "0.1.5"
enum_dispatch = "0.3"
foldhash = { version = "0.2.0", default-features = false }

# logging
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
static_assertions = "1.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "ansi",
] }
tracing-appender = "0.2"

# Release optimization settings
[profile.release]
# Enable maximum optimization
opt-level = 3
# Enable link-time optimization for better performance
lto = true
# Use 1 codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip debug symbols to reduce binary size
strip = true
